--- a/index.html
+++ b/index.html
@@ -1,35 +1,72 @@
+html
 <!DOCTYPE html>
 <html>
 <head>
   <title>End of Service Announcement</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f2f2f2;
+      color: #333;
+    }
+
+    h1 {
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 10px;
+    }
+
+    .announcement {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .signature {
+      color: #999;
+      font-size: 14px;
+      text-align: right;
+    }
+  </style>
 </head>
 <body>
-  <h1>End of Service Announcement</h1>
+  <div class="announcement">
+    <h1>End of Service Announcement</h1>
 
-  <p>Dear valued users and fellow gamers,</p>
+    <p>Dear valued users and fellow gamers,</p>
 
-  <p>We would like to express our deepest gratitude for your support and patronage of gg.catspin.eu.org throughout the years. It has been an incredible journey serving you and providing you with endless entertainment and joy through our services.</p>
+    <p>We would like to express our deepest gratitude for your support and patronage of gg.catspin.eu.org throughout the years. It has been an incredible journey serving you and providing you with endless entertainment and joy through our services.</p>
 
-  <p>However, it is with a heavy heart that we must inform you that as of 2023-09-20, gg.catspin.eu.org will be discontinuing its services. This decision was not made lightly, but after careful consideration and evaluation of various factors, we have come to the difficult conclusion that it is no longer feasible to continue operating the platform.</p>
+    <p>However, it is with a heavy heart that we must inform you that we are permanently closed. This decision was not made lightly, but after careful consideration and evaluation of various factors, we have come to the difficult conclusion that it is no longer feasible to continue operating the platform.</p>
 
-  <p>One of the key services we provided on gg.catspin.eu.org was a collection of unblocked games. We aimed to create a safe and enjoyable space for gamers to access their favorite games without any restrictions. However, we recently encountered a situation that has forced us to reevaluate our operations.</p>
+    <p>One of the key services we provided on gg.catspin.eu.org was a collection of unblocked games. We aimed to create a safe and enjoyable space for gamers to access their favorite games without any restrictions. However, we recently encountered a situation that has forced us to reevaluate our operations.</p>
 
-  <p>Regrettably, we received a DMCA (Digital Millennium Copyright Act) notice regarding one of the games on our website. Upon thorough investigation, it was determined that the game in question was copyrighted and, as a responsible platform, we are legally obligated to respect intellectual property rights. This incident has had significant consequences for our ability to continue providing our services.</p>
+    <p>Regrettably, we received a DMCA (Digital Millennium Copyright Act) notice regarding one of the games on our website. Upon thorough investigation, it was determined that the game in question was copyrighted and, as a responsible platform, we are legally obligated to respect intellectual property rights. This incident has had significant consequences for our ability to continue providing our services.</p>
 
-  <p>We want to assure you that we explored all possible alternatives and solutions to address this issue and continue offering our services. However, the legal implications and risks associated with copyright infringement were insurmountable. As much as we would have loved to find a way to continue serving our community, we must prioritize compliance with the law and protect the interests of all parties involved.</p>
+    <p>We want to assure you that we explored all possible alternatives and solutions to address this issue and continue offering our services. However, the legal implications and risks associated with copyright infringement were insurmountable. As much as we would have loved to find a way to continue serving our community, we must prioritize compliance with the law and protect the interests of all parties involved.</p>
 
-  <p>We understand that this news may come as a disappointment, and we sincerely apologize for any inconvenience caused. We want to take this moment to express our heartfelt appreciation to each and every one of you for being a part of the gg.catspin.eu.org community. Your support, feedback, and enthusiasm have been the driving force behind our platform.</p>
+    <p>We understand that this news may come as a disappointment, and we sincerely apologize for any inconvenience caused. We want to take this moment to express our heartfelt appreciation to each and every one of you for being a part of the gg.catspin.eu.org community. Your support, feedback, and enthusiasm have been the driving force behind our platform.</p>
 
-  <p>Thanks to our fellow gamers, we have built a community that celebrates the love for gaming and the connections we make through it. Your shared experiences, tips, and camaraderie have made gg.catspin.eu.org a vibrant and thriving space for gamers from all walks of life. It has been a privilege to witness the passion and dedication you have brought to our platform.</p>
+    <p>Thanks to our fellow gamers, we have built a community that celebrates the love for gaming and the connections we make through it. Your shared experiences, tips, and camaraderie have made gg.catspin.eu.org a vibrant and thriving space for gamers from all walks of life. It has been a privilege to witness the passion and dedication you have brought to our platform.</p>
 
-  <p>As we reflect on the journey we have taken together, we encourage you to cherish the memories and experiences you have created while using our services. Whether it was conquering virtual worlds, engaging in multiplayer battles, or simply enjoying the thrill of immersive gameplay, we hope that gg.catspin.eu.org has brought you moments of joy and excitement.</p>
+    <p>As we reflect on the journey we have taken together, we encourage you to cherish the memories and experiences you have created while using our services. Whether it was conquering virtual worlds, engaging in multiplayer battles, or simply enjoying the thrill of immersive gameplay, we hope that gg.catspin.eu.org has brought you moments of joy and excitement.</p>
 
-  <p>Please note that starting from 2023-09-20, the gg.catspin.eu.org website will no longer be accessible, and all services and functionalities will be discontinued. We understand that this news may be difficult to process, but we encourage you to explore other gaming platforms and continue sharing your love for gaming with others.</p>
+    <p>Please note that starting from 2023-09-20, the gg.catspin.eu.org website will no longer be accessible, and all services and functionalities will be discontinued. We understand that this news may be difficult to process, but we encourage you to explore other gaming platforms and continue sharing your love for gaming with others.</p>
 
-  <p>We want to express our deepest gratitude for your unwavering support and loyalty throughout the years. It has been an honor to serve you, and we will forever cherish the memories we have made together. If you have any questions or concerns, please feel free to reach out to our customer support team at support@gg.catspin.eu.org. We will do our best to assist you during this transition.</p>
+    <p>We want to express our deepest gratitude for your unwavering support and loyalty throughout the years. It has been an honor to serve you, and we will forever cherish the memories we have made together. If you have any questions or concerns, please feel free to reach out to our customer support team at support@gg.catspin.eu.org. We will do our best to assist you during this transition.</p>
 
-  <p>Once again, thank you for being a part of the gg.catspin.eu.org community. Your passion, creativity, and dedication have left an indelible mark on our platform, and we will always be grateful for the opportunity to have been a part of your gaming journey.</p>
+    <p>Once again, thank you for being a part of the gg.catspin.eu.org community. Your passion, creativity, and dedication have left an indelible mark on our platform, and we will always be grateful for the opportunity to have been a part of your gaming journey.</p>
 
-  <p>Sincerely,<br>The gg.catspin.eu.org Team</p>
+    <p>Sincerely,</p>
+    <p>The gg.catspin.eu.org Team</p>
+  </div>
 </body>
 </html>
