--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <p>Please note that starting from 2023-09-20, the gg.catspin.eu.org website will no longer be accessible, and all services and functionalities will be discontinued. We understand that this news may be difficult to process, but we encourage you to explore other gaming platforms and continue sharing your love for gaming with others.</p>
 
-    <p>We want to express our deepest gratitude for your unwavering support and loyalty throughout the years. It has been an honor to serve you, and we will forever cherish the memories we have made together. If you have any questions or concerns, please feel free to reach out to our customer support team at support@gg.catspin.eu.org. We will do our best to assist you during this transition.</p>
+    <p>We want to express our deepest gratitude for your unwavering support and loyalty throughout the years. It has been an honor to serve you, and we will forever cherish the memories we have made together. If you have any questions or concerns, please feel free to reach out to our customer support team at Catspindev@proton.me We will do our best to assist you during this transition.</p>
 
     <p>Once again, thank you for being a part of the gg.catspin.eu.org community. Your passion, creativity, and dedication have left an indelible mark on our platform, and we will always be grateful for the opportunity to have been a part of your gaming journey.</p>
 
